--- a/Genie.ipynb
+++ b/Genie.ipynb
@@ -103,20 +103,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 250,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def menorCluster(clusters):\n",
+    "    mySet = set(clusters)\n",
+    "    minimo = len(clusters)\n",
+    "    menor = len(clusters)\n",
+    "    for i in mySet:\n",
+    "        if((clusters.count(i)) < minimo):\n",
+    "            minimo = clusters.count(i)\n",
+    "            menor = i\n",
+    "            \n",
+    "    myList = []\n",
+    "    \n",
+    "    for j in range(len(clusters)):\n",
+    "        if(clusters[j]==menor):\n",
+    "            myList.append(j)\n",
+    "            \n",
+    "    return myList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1]"
+      ]
+     },
+     "execution_count": 245,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "menorCluster([1,1,2,2,2,3,3,3,4,4,4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 345,
    "metadata": {},
    "outputs": [],
    "source": [
     "def genieLinkage(data, limiar):\n",
     "    \n",
     "    clusters = {}\n",
-    "    row_index = -1\n",
-    "    col_index = -1\n",
+    "    row_index = 0\n",
+    "    col_index = 0\n",
     "    array = []\n",
     "    \n",
     "\n",
     "    for n in range(data.shape[0]):\n",
     "        array.append(n)\n",
+    "    \n",
     "        \n",
     "    clusters[0] = array.copy()\n",
     "\n",
@@ -125,53 +172,101 @@
     "    for k in range(1, data.shape[0]):\n",
     "        min_val = sys.maxsize\n",
     "        \n",
-    "        for i in range(0, data.shape[0]):\n",
-    "            for j in range(0, data.shape[1]):\n",
-    "                if(data[i][j]<=min_val):\n",
-    "                    min_val = data[i][j]\n",
-    "                    row_index = i\n",
-    "                    col_index = j\n",
-    "                    \n",
+    "        if(gini(clusters[k-1]) <= limiar):\n",
+    "            for i in range(0, data.shape[0]):\n",
+    "                for j in range(0, data.shape[1]):\n",
+    "                    if(data[i][j]<=min_val):\n",
+    "                        min_val = data[i][j]\n",
+    "                        row_index = i\n",
+    "                        col_index = j\n",
+    "        else:\n",
+    "            iList = menorCluster(clusters[k-1])\n",
+    "            for i in iList:\n",
+    "                for j in range(0, data.shape[0]):\n",
+    "                    if(j not in iList):\n",
+    "                        if(data[i][j]<=min_val):\n",
+    "                            min_val = data[i][j]\n",
+    "                            row_index = i\n",
+    "                            col_index = j\n",
+    "\n",
+    "        \n",
     "        #once we find the minimum value, we need to update the distance matrix\n",
     "        #updating the matrix by calculating the new distances from the cluster to all points\n",
     "        \n",
     "        #for Single Linkage\n",
-    "        for i in range(0,data.shape[0]):\n",
-    "            if(i != col_index):\n",
-    "                #we calculate the distance of every data point from newly formed cluster and update the matrix.\n",
-    "                temp = min(data[col_index][i],data[row_index][i])\n",
-    "                #we update the matrix symmetrically as our distance matrix should always be symmetric\n",
-    "                data[col_index][i] = temp\n",
-    "                data[i][col_index] = temp\n",
+    "        \n",
+    "#         for i in range(0,data.shape[0]):\n",
+    "#             if(i != col_index):\n",
+    "#                 #we calculate the distance of every data point from newly formed cluster and update the matrix.\n",
+    "#                 temp = min(data[i][col_index],data[row_index][i])\n",
+    "#                 #we update the matrix symmetrically as our distance matrix should always be symmetric\n",
+    "#                 data[row_index][i] = temp\n",
+    "#                 data[i][col_index] = temp\n",
     "\n",
     "                   \n",
     "        #set the rows and columns for the cluster with higher index i.e. the row index to infinity\n",
     "        #Set input[row_index][for_all_i] = infinity\n",
     "        #set input[for_all_i][row_index] = infinity\n",
-    "        for i in range (0,data.shape[0]):\n",
-    "            data[row_index][i] = sys.maxsize\n",
-    "            data[i][row_index] = sys.maxsize\n",
+    "#         data[row_index][col_index] = sys.maxsize\n",
+    "#         data[col_index][row_index] = sys.maxsize\n",
     "            \n",
     "        #Manipulating the dictionary to keep track of cluster formation in each step\n",
     "        #if k=0,then all datapoints are clusters\n",
-    "       \n",
-    "        minimum = min(row_index,col_index)\n",
-    "        maximum = max(row_index,col_index)\n",
+    "        array = clusters[k-1].copy()\n",
+    "        minimum = min(array[row_index],array[col_index])\n",
+    "        maximum = max(array[row_index],array[col_index])\n",
+    "        \n",
     "        for n in range(len(array)):\n",
     "            if(array[n]==maximum):\n",
     "                array[n] = minimum\n",
     "        clusters[k] = array.copy()\n",
     "        \n",
+    "        for i in range(len(array)):\n",
+    "            for j in range(len(array)):\n",
+    "                if(array[i]==array[j]):\n",
+    "                    data[i][j] = sys.maxsize\n",
+    "                    \n",
+    "        print(array)\n",
     "    return clusters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 346,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 22]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 20, 22, 22]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 18, 20, 20, 22, 22]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 16, 18, 18, 20, 20, 22, 22]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 14, 16, 16, 18, 18, 20, 20, 22, 22]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 12, 14, 14, 16, 16, 18, 18, 20, 20, 22, 22]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 10, 12, 12, 14, 14, 16, 16, 18, 18, 20, 20, 22, 22]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 8, 10, 10, 12, 12, 14, 14, 16, 16, 18, 18, 20, 20, 22, 22]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 6, 8, 8, 10, 10, 12, 12, 14, 14, 16, 16, 18, 18, 20, 20, 22, 22]\n",
+      "[0, 1, 2, 3, 4, 4, 6, 6, 8, 8, 10, 10, 12, 12, 14, 14, 16, 16, 18, 18, 20, 20, 22, 22]\n",
+      "[0, 1, 2, 2, 4, 4, 6, 6, 8, 8, 10, 10, 12, 12, 14, 14, 16, 16, 18, 18, 20, 20, 22, 22]\n",
+      "[0, 0, 2, 2, 4, 4, 6, 6, 8, 8, 10, 10, 12, 12, 14, 14, 16, 16, 18, 18, 20, 20, 22, 22]\n",
+      "[0, 0, 0, 0, 4, 4, 6, 6, 8, 8, 10, 10, 12, 12, 14, 14, 16, 16, 18, 18, 20, 20, 22, 22]\n",
+      "[0, 0, 0, 0, 4, 4, 4, 4, 8, 8, 10, 10, 12, 12, 14, 14, 16, 16, 18, 18, 20, 20, 22, 22]\n",
+      "[0, 0, 0, 0, 4, 4, 4, 4, 8, 8, 8, 8, 12, 12, 14, 14, 16, 16, 18, 18, 20, 20, 22, 22]\n",
+      "[0, 0, 0, 0, 4, 4, 4, 4, 8, 8, 8, 8, 12, 12, 12, 12, 16, 16, 18, 18, 20, 20, 22, 22]\n",
+      "[0, 0, 0, 0, 4, 4, 4, 4, 8, 8, 8, 8, 12, 12, 12, 12, 16, 16, 16, 16, 20, 20, 22, 22]\n",
+      "[0, 0, 0, 0, 4, 4, 4, 4, 8, 8, 8, 8, 12, 12, 12, 12, 16, 16, 16, 16, 20, 20, 20, 20]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 8, 8, 8, 8, 12, 12, 12, 12, 16, 16, 16, 16, 20, 20, 20, 20]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 8, 8, 8, 8, 8, 8, 8, 8, 16, 16, 16, 16, 20, 20, 20, 20]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 8, 8, 8, 8, 8, 8, 8, 8, 16, 16, 16, 16, 16, 16, 16, 16]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 16, 16, 16, 16, 16, 16, 16, 16]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
    "source": [
-    "def genie(dataset):\n",
+    "def genie(dataset, limiar):\n",
     "    \n",
     "    dataX = dataset.loc[:,dataset.columns[:-1]].values\n",
     "    dataY = dataset.loc[:,[dataset.columns[-1]]].values\n",
@@ -186,17 +281,17 @@
     "    \n",
     "#     dataMST = dataMST.toarray().astype(float)\n",
     "    \n",
-    "    Z = genieLinkage(dataDistances, 0)\n",
+    "    Z = genieLinkage(dataDistances, limiar)\n",
     "#     fig = plt.figure(figsize=(25, 10))\n",
     "#     dn = dendrogram(Z)\n",
     "#     plt.show()\n",
     "    return Z\n",
-    "ourDistances = genie(lenses)"
+    "ourDistances = genie(lenses, 0.36)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [
     {
@@ -734,13 +829,103 @@
        " 23: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]}"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 338,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ourDistances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 347,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.347222222222\n",
+      "0.345\n",
+      "0.343369829684\n",
+      "0.342338217338\n",
+      "0.341911764706\n",
+      "0.342097170972\n",
+      "0.342901234568\n",
+      "0.344330855019\n",
+      "0.346393034826\n",
+      "0.349094881398\n",
+      "0.352443609023\n",
+      "0.356446540881\n",
+      "0.361111111111\n",
+      "0.378205128205\n",
+      "0.390625\n",
+      "0.398148148148\n",
+      "0.400537634409\n",
+      "0.397540983607\n",
+      "0.388888888889\n",
+      "0.452380952381\n",
+      "0.474358974359\n",
+      "0.444444444444\n",
+      "0.666666666667\n",
+      "nan\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ajgan/anaconda/lib/python3.6/site-packages/ipykernel_launcher.py:9: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  if __name__ == '__main__':\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(ourDistances)):\n",
+    "    print(gini(ourDistances[i]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.14999999999999999"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gini([2,1,1,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myArray = [1,1,2,3]\n",
+    "myArray.count(1)"
    ]
   },
   {
