Colocando labels no resultado do Genie

--- a/Genie.ipynb
+++ b/Genie.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -81,7 +81,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def labelClusters(clusters, target):\n",
+    "    mySet = set(clusters)\n",
+    "    resultList = []\n",
+    "    for i in mySet:\n",
+    "        myClasses = []\n",
+    "        for j in range(len(clusters)):\n",
+    "            if (clusters[j] == i):\n",
+    "                myClasses.append(target[j]) \n",
+    "        resultList.append(max(set(myClasses), key=myClasses.count))\n",
+    "    \n",
+    "    mySetArray = []\n",
+    "    for i in mySet:\n",
+    "        mySetArray.append(i)\n",
+    "        \n",
+    "    labels = []\n",
+    "        \n",
+    "    for i in range(len(clusters)):\n",
+    "        for j in range(len(mySetArray)):\n",
+    "            if (clusters[i] == mySetArray[j]):\n",
+    "                labels.append(resultList[j])\n",
+    "    return labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -103,8 +134,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def counting(arr):\n",
@@ -124,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -150,8 +183,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def genieLinkage(data, limiar):\n",
@@ -190,29 +225,6 @@
     "                            row_index = i\n",
     "                            col_index = j\n",
     "\n",
-    "        \n",
-    "        #once we find the minimum value, we need to update the distance matrix\n",
-    "        #updating the matrix by calculating the new distances from the cluster to all points\n",
-    "        \n",
-    "        #for Single Linkage\n",
-    "        \n",
-    "#         for i in range(0,data.shape[0]):\n",
-    "#             if(i != col_index):\n",
-    "#                 #we calculate the distance of every data point from newly formed cluster and update the matrix.\n",
-    "#                 temp = min(data[i][col_index],data[row_index][i])\n",
-    "#                 #we update the matrix symmetrically as our distance matrix should always be symmetric\n",
-    "#                 data[row_index][i] = temp\n",
-    "#                 data[i][col_index] = temp\n",
-    "\n",
-    "                   \n",
-    "        #set the rows and columns for the cluster with higher index i.e. the row index to infinity\n",
-    "        #Set input[row_index][for_all_i] = infinity\n",
-    "        #set input[for_all_i][row_index] = infinity\n",
-    "#         data[row_index][col_index] = sys.maxsize\n",
-    "#         data[col_index][row_index] = sys.maxsize\n",
-    "            \n",
-    "        #Manipulating the dictionary to keep track of cluster formation in each step\n",
-    "        #if k=0,then all datapoints are clusters\n",
     "        array = clusters[k-1].copy()\n",
     "        minimum = min(array[row_index],array[col_index])\n",
     "        maximum = max(array[row_index],array[col_index])\n",
@@ -233,8 +245,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
-   "metadata": {},
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def genie(dataset, limiar):\n",
@@ -248,30 +262,16 @@
     "    #making all the diagonal elements infinity \n",
     "    np.fill_diagonal(dataDistances,sys.maxsize)\n",
     "    \n",
-    "#     dataMST = minimum_spanning_tree(dataDistances)\n",
+    "    clusters = genieLinkage(dataDistances, limiar)\n",
     "    \n",
-    "#     dataMST = dataMST.toarray().astype(float)\n",
+    "    labels = labelClusters(clusters, dataY)\n",
     "    \n",
-    "    Z = genieLinkage(dataDistances, limiar)\n",
-    "\n",
-    "    return Z"
+    "    return labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "iris = lo\n",
-    "genie(lenses, 0.36)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -303,26 +303,6 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
-       " 14,\n",
-       " 14,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 20,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 20,\n",
-       " 14,\n",
-       " 14,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -339,109 +319,129 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
-       " 50,\n",
-       " 51,\n",
-       " 50,\n",
-       " 53,\n",
-       " 54,\n",
-       " 55,\n",
-       " 51,\n",
-       " 57,\n",
-       " 54,\n",
-       " 53,\n",
-       " 57,\n",
-       " 61,\n",
-       " 62,\n",
-       " 63,\n",
-       " 62,\n",
-       " 54,\n",
-       " 55,\n",
-       " 62,\n",
-       " 68,\n",
-       " 53,\n",
-       " 70,\n",
-       " 71,\n",
-       " 70,\n",
-       " 63,\n",
-       " 71,\n",
-       " 54,\n",
-       " 54,\n",
-       " 50,\n",
-       " 63,\n",
-       " 53,\n",
-       " 53,\n",
-       " 53,\n",
-       " 62,\n",
-       " 83,\n",
-       " 55,\n",
-       " 51,\n",
-       " 50,\n",
-       " 68,\n",
-       " 61,\n",
-       " 53,\n",
-       " 61,\n",
-       " 63,\n",
-       " 62,\n",
-       " 57,\n",
-       " 61,\n",
-       " 61,\n",
-       " 61,\n",
-       " 71,\n",
-       " 57,\n",
-       " 61,\n",
-       " 100,\n",
-       " 101,\n",
-       " 102,\n",
-       " 103,\n",
-       " 104,\n",
-       " 105,\n",
-       " 55,\n",
-       " 107,\n",
-       " 104,\n",
-       " 109,\n",
-       " 110,\n",
-       " 110,\n",
-       " 112,\n",
-       " 101,\n",
-       " 114,\n",
-       " 100,\n",
-       " 103,\n",
-       " 117,\n",
-       " 105,\n",
-       " 70,\n",
-       " 109,\n",
-       " 114,\n",
-       " 105,\n",
-       " 70,\n",
-       " 109,\n",
-       " 102,\n",
-       " 70,\n",
-       " 70,\n",
-       " 104,\n",
-       " 102,\n",
-       " 107,\n",
-       " 117,\n",
-       " 104,\n",
-       " 83,\n",
-       " 103,\n",
-       " 107,\n",
-       " 100,\n",
-       " 103,\n",
-       " 70,\n",
-       " 112,\n",
-       " 109,\n",
-       " 141,\n",
-       " 101,\n",
-       " 109,\n",
-       " 109,\n",
-       " 141,\n",
-       " 70,\n",
-       " 110,\n",
-       " 100,\n",
-       " 70]"
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 2,\n",
+       " 1,\n",
+       " 2,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 1,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 1,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2]"
       ]
      },
-     "execution_count": 404,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
