Genie com calculo de fm

--- a/Genie.ipynb
+++ b/Genie.ipynb
@@ -81,6 +81,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import f1_score"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 46,
    "metadata": {
     "collapsed": true
@@ -245,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 60,
    "metadata": {
     "collapsed": true
    },
@@ -266,7 +277,9 @@
     "    \n",
     "    labels = labelClusters(clusters, dataY)\n",
     "    \n",
-    "    return labels"
+    "    fmScore = f1_score(dataY, labels, average='micro')\n",
+    "    \n",
+    "    return fmScore"
    ]
   },
   {
@@ -283,165 +296,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 2,\n",
-       " 1,\n",
-       " 2,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 1,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 1,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2]"
+       "0.97333333333333338"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
